syntax = "proto3";
package iam;
option go_package = "/iam";

message Message {
  string key = 1;
  repeated int64 value = 2;
}

message RegisterRequest {
  string login = 1;
  string password = 2;
}

message RegisterResponse {}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse { string token = 1; }

message ValidateRequest { string token = 1; }

message ValidateResponse { string token = 1; }

message RefreshRequest { string token = 1; }

message RefreshResponse { string token = 1; }

service IAMService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Validate(ValidateRequest) returns (ValidateResponse);
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
}
